example/lib/src/generated/errors/errors_localization_pa.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Panjabi Punjabi (`pa`).
class ErrorsLocalizationPa extends ErrorsLocalization {
  ErrorsLocalizationPa([String locale = 'pa']) : super(locale);

  @override
  String get error => 'An error occurred';

  @override
  String get unexpectedError => 'An unexpected error occurred';

  @override
  String get bugReportSentText => 'ਬੱਗ ਰਿਪੋਰਟ ਸਫਲਤਾਪੂਰਵਕ ਭੇਜੀ ਗਈ ਹੈ.';
}

/// The translations for Panjabi Punjabi, as used in Pakistan (`pa_PK`).
class ErrorsLocalizationPaPk extends ErrorsLocalizationPa {
  ErrorsLocalizationPaPk() : super('pa_PK');

  @override
  String get error => 'ایک غلطی پیش آئی';

  @override
  String get unexpectedError => 'ایک غیر متوقع غلطی پیش آئی';

  @override
  String get bugReportSentText => 'بگ رپورٹ کامیابی نال بھیج دتی گئی.';
}
